<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Name Category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/Item_name"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <EditText
            android:id="@+id/edit_item_name"
            android:hint="@string/hint_item_name"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_weight="2"
            style="@style/EditorFieldStyle" />
    </LinearLayout>

    <!-- Quantity Category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/Item_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Quantity field -->
            <Button
                android:id="@+id/edit_quantity_button_inc"
                android:onClick="IncreaseQuantity"
                style="@style/IncQuantityButtonStyle"
                android:text="+" />

            <EditText
                android:id="@+id/edit_quantity_text_view"
                android:hint="@string/hint_item_quantity"
                android:inputType="number"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                style="@style/QuantityTextViewStyle" />

            <Button
                android:id="@+id/edit_quantity_button_dec"
                android:onClick="DecreaseQuantity"
                style="@style/DecQuantityButtonStyle"
                android:text="-" />

        </RelativeLayout>
    </LinearLayout>

    <!-- Price Category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/Item_price"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_price"
                android:hint="@string/hint_item_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for price (\) -->
            <TextView
                android:id="@+id/label_item_price_units"
                android:text="@string/unit_item_price"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Image Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/Item_image"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <EditText
            android:id="@+id/edit_item_image"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="Image"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />
    </LinearLayout>
</LinearLayout>